# speckle-widgets

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
docs/: callback.html
examples/: demo.py
speckle_widgets/: __init__.py  auth.py  viewer.py
src/: auth.js  viewer.js
