[project]
name = "speckle-widgets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "specklepy>=3.2.4",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.15.1",
]
